# safety_first

./: .gitignore  CMakeLists.txt  README.md
examples/: and_interface.cpp  bool_constructors.cpp  equal.cpp  equal.hpp  not.cpp  not.hpp  primitive_interface.cpp  test_repeatability.cpp  test_stability.cpp  uint8_constructors.cpp
src/: books.h  books_manipulation.h  case.h  ledger.h  principia_mathematica.h  proof_checker_defs.h  r.h  util.h  uuid.h
src/primitives/: bool.hpp  uint8.hpp
